# onnx_ui_tensort

./: CMakeLists.txt  README.md  build.bat  ui_widget.h  widget.cpp  widget.h  widget.ui
libsrc/: CMakeLists.txt  Onnx2Trt.cpp  Onnx2Trt.h
